<resources>
    <string name="app_name">getTrained</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="you_re_logged_in_as">You\'re logged in as:</string>
    <string name="how_many_pushups">How many pushups:</string>
    <string name="home">home</string>
    <string name="account">account</string>
    <string name="settings">settings</string>
    <string name="user">user</string>
    <string name="hello">Hello</string>
    <string name="search_activity">Search activity</string>
    <string name="strength">Strength</string>
    <string name="running">Running</string>
    <string name="statistics">Statistics</string>
    <string name="the_wall">The Wall</string>
    <string name="latest_wall_post">Latest wall post</string>
    <string name="i_just_ran_15_miles">I just ran 15 miles!</string>
    <string name="activity_name">activity_name</string>
    <string name="programs">New Program</string>
    <string name="exercises">My Programs</string>
    <string name="welcome_message">Welcome to getTrained</string>
...
